dataset1235/2025-2/2868285114/users/2697660235/executions/3649835072_1462915504.log
== RUN (2025-08-16 18:22:36)
-- CODE: 

import math
# faça seu código aqui!
lado = float(input())

apotema = lado/(2*math.tan*(math.pi/5))
area = (5/2) * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/(2*math.tan*(math.pi/5))
                    ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/(2*math.tan*(math.pi/5))
                    ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/(2*math.tan*(math.pi/5))
                    ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/(2*math.tan*(math.pi/5))
                    ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/(2*math.tan*(math.pi/5))
                    ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/(2*math.tan*(math.pi/5))
                    ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:12:21)
-- CODE: 
from math import *
comprimentoLP = int(imput())

apotema = comprimentoLP/2*tan(pi/5)
area = 5/2 *comprimentoLP*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimentoLP = int(imput())
                        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimentoLP = int(imput())
                        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimentoLP = int(imput())
                        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimentoLP = int(imput())
                        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimentoLP = int(imput())
                        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimentoLP = int(imput())
                        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:23:27)
-- CODE: 

import math
# faça seu código aqui!
lado = float(input())

apotema = lado/(2*math.tan(math.pi/5))
area = (5/2) * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:16:31)
-- CODE: 
from math import *
import math
# faça seu código aqui!
lado = float(input())

apotema = lado/2*math.tan*(math.pi/5)
area = 5/2 * (lado * apotema)

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:55:36)
-- CODE: 
import math from *
raio = float(input())
area = pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    import math from *
                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    import math from *
                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    import math from *
                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    import math from *
                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    import math from *
                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    import math from *
                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:56:11)
-- CODE: 
import from math *
raio = float(input())
area = pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:13:26)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input())

apotema = lado/ 2*math.tan(math.pi/5)
area = 5/2 * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:59:50)
-- CODE: 
from math import *
raio = float(input())
area = pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
254.469
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
113.097
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
380.133
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
201.062
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
50.265
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
314.159
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:18:29)
-- CODE: 

import math
# faça seu código aqui!
lado = float(input())

apotema = lado/2*math.tan*(math.pi/5)
area = 5/2 * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:36:35)
-- CODE: 

import math
# faça seu código aqui!
lado = float(input())

apotema = lado/(2*math.tan(math.pi/5))
area = (5/2) * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:17:44)
-- CODE: 
from math import *
import math
# faça seu código aqui!
lado = float(input())

apotema = (lado/2)*math.tan*(math.pi/5)
area = 5/2 * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:16:02)
-- CODE: 
from math import *
import math
# faça seu código aqui!
lado = int(input())

apotema = lado/2*math.tan*(math.pi/5)
area = 5/2 * (lado * apotema)

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/2*math.tan*(math.pi/5)
              ~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:56:43)
-- CODE: 
import math 
raio = float(input())
area = math.pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
254.469
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
113.097
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
380.133
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
201.062
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
50.265
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
314.159
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:14:56)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input())

apotema = lado/ 2*math.tan*(math.pi/5)
area = 5/2 * (lado * apotema)

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan*(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan*(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan*(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan*(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan*(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado/ 2*math.tan*(math.pi/5)
                      ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 18:17:55)
-- CODE: 

import math
# faça seu código aqui!
lado = float(input())

apotema = (lado/2)*math.tan*(math.pi/5)
area = 5/2 * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = (lado/2)*math.tan*(math.pi/5)
              ~~~~~~~~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 18:23:43)
-- CODE: 

import math
# faça seu código aqui!
lado = float(input())

apotema = lado/(2*math.tan(math.pi/5))
area = (5/2) * lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:29:03)
-- CODE: 
from math import *

comprimentoLP = float(input())

apotema = comprimentoLP/(2*tan(pi/5))
area = 5/2*comprimentoLP*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:57:44)
-- CODE: 
from import math *
raio = float(input())
area = pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from import math *
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from import math *
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from import math *
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from import math *
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from import math *
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from import math *
         ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:56:12)
-- CODE: 
import from math *
raio = float(input())
area = pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:55:52)
-- CODE: 
import from math *
raio = float(input())
area = pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:55:50)
-- CODE: 
import from math *
raio = float(input())
area = pi*raio**2
print(round(area, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    import from math *
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
